--- a/src/features/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -1,39 +1,30 @@
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/mixins/_wrapper.mixins.scss" as wr;
-@use "@assets/sass/_utils.functions.scss" as *;
+@use "@assets/sass/_utils.functions.scss" as f;
 @use "@assets/sass/variables/_variables.colors.scss" as c;
 
 .relatedFiguresWrapper {
     @include wr.main-page-block-wrapper();
-
     @include mut.rem-margined($bottom: 110px, $top: 110px);
 }
 
 .relatedFiguresContainer {
     @include mut.sized($width: 90%, $height: 100%);
-
     @include mut.flexed($direction: column, $align-items: center);
     
-    .moreInfo{
+    .seeMoreBtn {
         @include mut.sized($width: 1200px);
-
-        @include mut.rem-padded($top: 43px);
-
-        a{
-            @include mut.with-font($font-weight: 500, $font-size: 20px);
-            line-height: pxToRem(23px);
-            text-decoration-line: underline;
-            color: c.$dark-red-color;
-        }
+        align-self: center;
+        margin-top: f.pxToRem(-25px);
+        z-index: 10;
     }
 }
 
 .relatedFiguresSliderContainer {
     @include mut.sized($width: 1200px);
-    
+
     .slick-list {
         @include mut.sized($height: 458px);
-
-        @include mut.rem-padded($left: 1px);
+        @include mut.rem-padded($left: 5px);
     }
 }
