--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -1,27 +1,28 @@
 $pure-white-color: #FFFFFF !important;
-$pure-black-color: #000000;
-$lighter-black-color: #1D1F23;
+$pure-black-color: #000000 !important;
+$lighter-black-color: #1D1F23 !important;
 
 $accented-gray-color: #F4F4F4 !important;
-$lighter-gray-color: #D3CDCA;
-$darker-gray-color: #5D5D5D;
-$dark-gray-color: #4D4D4D;
+$lighter-gray-color: #D3CDCA !important;
+$darker-gray-color: #5D5D5D !important;
+$dark-gray-color: #4D4D4D !important;
 
-$normal-gray-color: #7F7F7F;
-$normal-darker-gray-color: #7E7E7E;
+$normal-gray-color: #7F7F7F !important;
+$normal-darker-gray-color: #7E7E7E !important;
 
 $dark-red-color: #8D1F16 !important;
 $accented-red-color: #DB3424 !important;
 
-$slider-base-dot-color: #D9D9D9;
-$timeline-reel-color: #D9D9D9;
-$copyright-section-color: #C4C4C4;
+$slider-base-dot-color: #D9D9D9 !important;
+$timeline-reel-color: #D9D9D9 !important;
+$copyright-section-color: #C4C4C4 !important;
 
-$selected-arrow-color: #C4C4C4;
-$base-arrow-color: #F2F2F2;
+$selected-arrow-color: #C4C4C4 !important;
+$base-arrow-color: #F2F2F2 !important;
 
 $card-scrollbar-track-color: #DEDCDC !important;
 $scrollbar-thumb-color: #891C1B !important;
 $scrollbar-track-color: #C9C5C2 !important;
 
+$burger-menu-color: #7F7F7F !important;
 $ant-menu-color: #E13F30 !important;
