--- a/src/app/common/components/modals/InterestingFacts/InterestingFactsModal.styles.scss
+++ b/src/app/common/components/modals/InterestingFacts/InterestingFactsModal.styles.scss
@@ -3,72 +3,66 @@
 @use "@assets/sass/variables/_variables.colors.scss" as c;
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 
-$bookImg: "@assets/images/Books_stretched.png";
+$factImg: "@assets/images/WowFacts1.png";
+.interestingFactsModal{
+  @include mut.sized(823px,765px);
+}
 
-.ant-modal {
-  .ant-modal-content {
-    height: pxToRem(830px);
-    padding: 0 !important;
-    box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%),
-    0 6px 20px 0 rgb(0 0 0 / 19%);
+.interestingFactsModal {
+  &.ant-modal {
+    .ant-modal-content {
+      height: pxToRem(765px);
+      padding: 0 !important;
+      box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%),
+      0 6px 20px 0 rgb(0 0 0 / 19%);
 
-    border-radius: 70px;
-    -webkit-border-radius: 70px;
-  }
-  .ant-modal-close {
-    @include mut.sized(83px, 80px);
-    @include mut.positioned-as(absolute, $left: 93%, $top: -25px);
-    @include mut.circular();
+      border-radius: 70px;
+      -webkit-border-radius: 70px;
+    }
 
-    background-color: c.$pure-white-color;
+    .ant-modal-close {
+      @include mut.sized(83px, 80px);
+      @include mut.positioned-as(absolute, $left: 93%, $top: -25px);
+      @include mut.circular();
 
-    &:hover {
-      background-color: #ece9e9 !important;
+      background-color: c.$pure-white-color;
+
+      &:hover {
+        background-color: #ece9e9 !important;
+      }
     }
   }
 }
 
-.sourceImgContainer {
+.factsImgContainer {
   position: sticky;
-  @include mut.sized(100%, 160px);
-
+  @include mut.sized(100%, 435px);
   @include mut.flex-centered();
-  @include mut.bg-image($bookImg);
-
-  h1 {
-    color: white;
-    @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 40px);
-  }
+  @include mut.bg-image($factImg);
 }
 
-.sourcesContentContainer {
+.factsContentContainer {
   @include mut.flexed($direction: column, $gap: 15px);
-  @include mut.rem-margined(30px, $left: 30px);
+  @include mut.rem-margined(29px, 42px, 24px, 42px);
 
   h1 {
-    @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 36px);
-    line-height: pxToRem(48px);
+    @include mut.with-font(ft.$roboto-font, 500, 26px, normal);
+    line-height: pxToRem(30px);
+    color: c.$accented-red-color;
   }
 }
 
-.volumeContainer {
+.factsTextContainer {
+  @include mut.with-font(ft.$roboto-font, 300, 20px, normal);
+  line-height: 23px;
+  color: c.$lighter-black-color;
   @include mut.flexed($direction: column, $gap: 10px);
-  height: pxToRem(565px);
-  overflow-y: scroll;
+  height: pxToRem(223px);
+  overflow-y: auto;
 
   padding-right: pxToRem(10px);
   margin-right: pxToRem(10px);
 
-  p {
-    font-weight: 300;
-    line-height: pxToRem(18px);
-
-    &:hover {
-      color: #4F4242;
-      text-decoration: underline;
-      cursor: pointer;
-    }
-  }
 
   &::-webkit-scrollbar-thumb,
   &::-webkit-scrollbar-track
