--- a/src/features/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -6,7 +6,27 @@
 .relatedFiguresWrapper {
     @include wr.main-page-block-wrapper();
 
-    @include mut.rem-margined($bottom: 110px, $top: 110px);
+    @include mut.rem-margined($top: 110px);
+}
+
+.bigWrapper {
+    @include mut.sized($height: 671px);
+}
+
+.smallWrapper {
+    @include mut.sized($height: 605px);
+
+    .slick-track {
+        @include mut.rem-margined();
+
+        .slick-cloned {
+            display: none;
+        }
+    }
+    
+    .moreInfo {
+        display: none;
+    }
 }
 
 .relatedFiguresContainer {
@@ -14,16 +34,22 @@
 
     @include mut.flexed($direction: column, $align-items: center);
     
-    .moreInfo{
+    .moreInfo {
         @include mut.sized($width: 1200px);
 
         @include mut.rem-padded($top: 43px);
 
-        a{
+        p {
             @include mut.with-font($font-weight: 500, $font-size: 20px);
             line-height: pxToRem(23px);
             text-decoration-line: underline;
             color: c.$dark-red-color;
+
+            cursor: pointer;
+
+            &:hover {
+                filter: contrast(150%);
+            }
         }
     }
 }
