--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,8 @@
 
 body {
   font-family: ft.$body-tag-font;
-  @include ut.antialiased;
+  @include ut.antialiased();
+  overflow-x: hidden;
 }
 
 code {
