Implemented "change-slide-on-click" and "1 slide" in slider option

--- a/src/features/SlickSlider/SlickSlider.styles.scss
+++ b/src/features/SlickSlider/SlickSlider.styles.scss
@@ -49,3 +49,13 @@ li.slick-active button:before {
 .sliderClass {
     width: 100%;
 }
+
+.transformScale{
+    transform: scale(1.5);
+}
+
+/*
+.interestingFactsSliderContainer .slick-cloned:only-of-type {
+    display: none !important;
+}
+*/
