--- a/src/features/MainBlock/MainBlock.styles.scss
+++ b/src/features/MainBlock/MainBlock.styles.scss
@@ -8,8 +8,11 @@
   margin-top: pxToRem(82px);
 }
 
-.mainStreetcodeBlock {
+.blockCentering {
   @include mut.flex-centered();
+}
+
+.bgr {
   @include mut.bg-image('@assets/images/background.png');
 }
 
@@ -100,6 +103,7 @@
 .streetcodeTitle {
   @include mut.rem-padded(7px, 10px, 7px, 4px);
   @include mut.with-font(ft.$closer-text-font, $font-weight: 600, $font-size: 36px);
+  color: c.$lighter-black-color;
 }
 
 .streetcodeDate {
@@ -134,10 +138,8 @@
   border-color: c.$accented-red-color;
   @include mut.full-rounded(14px);
   background-color: c.$accented-red-color;
-
   &:hover {
-    border-color: c.$dark-red-color;
-    background-color: c.$dark-red-color;
+    box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);
   }
 }
 
@@ -149,10 +151,8 @@
   @include mut.flex-centered();
   @include mut.full-rounded(14px);
   color: c.$accented-red-color;
-
   &:hover {
-    color: c.$dark-red-color;
-    border-color: c.$dark-red-color;
+    filter: drop-shadow(0px 4px 4px rgba(219, 52, 36, 0.1));
   }
 }
 
