--- a/src/features/SlickSlider/SliderItems/InterestingFactSliderItem/InterestingFactSliderItem.styles.scss
+++ b/src/features/SlickSlider/SliderItems/InterestingFactSliderItem/InterestingFactSliderItem.styles.scss
@@ -4,6 +4,7 @@
 @use "@assets/sass/_utils.functions.scss" as *;
 
 .interestingFactSlide {
+    cursor: pointer;
     position: relative;
     width: pxToRem(387px);
     height: pxToRem(416px);
