Fixed page width bug

--- a/src/components/StreetcodeComponent/Streetcode.styles.scss
+++ b/src/components/StreetcodeComponent/Streetcode.styles.scss
@@ -1,6 +1,6 @@
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 
 .streetcodeContainer {
-    width: calc(100% + 1.22rem);
+    width: 100%;
     overflow: hidden;
 }
