--- a/src/assets/fonts/fonts.styles.scss
+++ b/src/assets/fonts/fonts.styles.scss
@@ -10,7 +10,7 @@ $closer-text-medium-family: 'Closer Text Med';
 
 $closer-family:'Closer';
 $closer-light-family:'Closer-Light';
-$closer-medium-family:'closer_medium';
+$closer-medium-family:'Closer-Medium';
 
 //----------------------------------------Closer Text-----------------------------------------------
 
