--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -1,6 +1,7 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as *;
 @use "@sass/mixins/_wrapper.mixins.scss" as wr;
+@use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
 
 .interestingFactsContainer {
     @include mut.sized(90%, 784px);
@@ -39,6 +40,6 @@
 
 .singleSlideContainer{
     @include mut.flex-centered();
-    transform: scale(1.32);
+    @include vnd.vendored(transform, scale(1.32));
     padding-top:10%;
 }
