--- a/src/app/common/components/AudioPlayer/AudioPlayer.styles.scss
+++ b/src/app/common/components/AudioPlayer/AudioPlayer.styles.scss
@@ -3,10 +3,7 @@
 @use "@assets/sass/_utils.functions.scss" as *;
 
 .audioPlayer {
-  align-items: center;
-  display: flex;
-  width: pxToRem(1200px);
-  height: 30px;
+  @include mut.sized(1200px, 30px);
   @include mut.flex-centered();
 }
 
@@ -22,32 +19,20 @@
   --knobby: #D9D9D9;
 
   @include mut.flex-centered();
-  color: #D9D9D9;
   appearance: none;
-  //background: var(--bar-bg);;
-  border-radius: 10px;
   position: relative;
-  width: 1081px;
-  height: 3px;
-  outline: none;
+  @include mut.sized(1081px, 3px);
 }
 .progressBar::-webkit-slider-runnable-track {
   background: rgba($color: #DFDFDF, $alpha: .43);
-  border-radius: 10px;
-  position: relative;
-  width: 100%;
-  height: 3px;
-  outline: none;
+  @include mut.sized(100%, 3px);
 }
 
 /* progress bar - firefox */
 .progressBar::-moz-range-track {
   background: rgba($color: #DFDFDF, $alpha: .43);
-  border-radius: 10px;
   position: relative;
-  width: 100%;
-  height: 3px;
-  outline: none;
+  @include mut.sized(100%, 3px);
 }
 
 .progressBar::-moz-focus-outer {
@@ -60,8 +45,6 @@
   height: 3px;
   width: var(--seek-before-width);
   background-color: var(--seek-before-color);
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
   position: absolute;
   top: 0;
   left: 0;
@@ -80,8 +63,7 @@
 /* knobby - chrome and safari */
 .progressBar::-webkit-slider-thumb {
   -webkit-appearance: none;
-  height: 13px;
-  width: 13px;
+  @include mut.sized(13px, 13px);
   border-radius: 50%;
   border: none;
   background-color: var(--knobby);
@@ -93,8 +75,7 @@
 
 /* knobby - firefox */
 .progressBar::-moz-range-thumb {
-  height: 13px;
-  width: 13px;
+  @include mut.sized(13px, 13px);
   border-radius: 50%;
   border: transparent;
   background-color: var(--knobby);
