Fixed sources block display.

--- a/src/features/SlickSlider/SlickSlider.styles.scss
+++ b/src/features/SlickSlider/SlickSlider.styles.scss
@@ -49,3 +49,9 @@ li.slick-active button:before {
 .sliderClass {
     width: 100%;
 }
+
+.nonLeftSwipable {
+    .slick-prev:before {
+        pointer-events: none;
+    }
+}
