--- a/src/features/SlickSlider/SlickSlider.styles.scss
+++ b/src/features/SlickSlider/SlickSlider.styles.scss
@@ -42,6 +42,14 @@
     transition: .5s;
 }
 
+.slick-disabled {
+    filter: c.$base-arrow-filter-color;
+
+    &:before {
+        pointer-events: none;
+    }
+}
+
 li.slick-active button:before {
     background: c.$dark-red-color;
 }
@@ -50,8 +58,13 @@ li.slick-active button:before {
     width: 100%;
 }
 
-.nonLeftSwipable {
-    .slick-prev:before {
-        pointer-events: none;
+.nonInfiniteSlider {
+    .slick-arrow {
+        opacity: .25;
+        filter: c.$selected-arrow-filter-color;
+
+        &:hover {
+            opacity: .25;
+        }
     }
 }
