--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -5,7 +5,6 @@
 
 .relatedFiguresWrapper {
     @include wr.main-page-block-wrapper();
-
     @include mut.rem-margined($bottom: 80px, $top: 170px);
 }
 
@@ -16,14 +15,6 @@
 .smallWrapper {
     @include mut.sized($height: 605px);
 
-    .slick-track {
-        @include mut.rem-margined();
-
-        .slick-cloned {
-            display: none;
-        }
-    }
-    
     .moreInfo {
         display: none;
     }
@@ -32,23 +23,20 @@
 .relatedFiguresContainer {
     @include mut.sized($width: 90%, $height: 100%);
     @include mut.flexed($direction: column, $align-items: center);
-    
+
     .moreInfo {
         @include mut.sized($width: 1200px);
-
-        @include mut.rem-padded($top: 43px);
+        padding-top: f.pxToRem(43px);
 
         p {
             @include mut.with-font($font-weight: 500, $font-size: 20px);
-            line-height: 25px;
-            text-decoration-line: none;
-            color: c.$dark-red-color;
+            line-height: f.pxToEm(25px);
 
+            color: c.$dark-red-color;
             cursor: pointer;
 
             &:hover {
                 text-decoration-line: underline;
-
                 filter: contrast(150%);
             }
         }
@@ -58,22 +46,8 @@
 .relatedFiguresSliderContainer {
     @include mut.sized($width: 1200px);
 
-    .slick-arrow{
-        top: 213px;
-
-        filter: invert(79%) sepia(98%) saturate(1%) hue-rotate(356deg) brightness(101%) contrast(100%) !important;
-
-        &:hover:before {
-            filter: none !important;
-        }
-    }
-
-    .slick-disabled {
-        filter: none !important;
-        
-        &:before{
-            pointer-events: none !important;
-        }
+    .slick-arrow {
+        top: f.pxToRem(213px);
     }
 
     .slick-list {
