Added donate btn and its modal.

--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -6,6 +6,7 @@ $accented-gray-color: #F4F4F4 !important;
 $lighter-gray-color: #D3CDCA !important;
 $darker-gray-color: #5D5D5D !important;
 $dark-gray-color: #4D4D4D !important;
+$darkish-gray-color: #A3A3A3 !important;
 
 $normal-gray-color: #7F7F7F !important;
 $normal-darker-gray-color: #7E7E7E !important;
