--- a/src/features/StreetcodePage/MapBlock/Radio/Radio.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Radio/Radio.styles.scss
@@ -9,7 +9,7 @@
   @include mut.flexed(row, center, center);
   z-index: 2;
   background: white;
-  border: 3px solid #DB3424;
+  border: 3px solid c.$accented-red-color;
   border-radius: 23px;
 }
 
