--- a/src/features/StreetcodePage/DonateBtn/DonateBtn.styles.scss
+++ b/src/features/StreetcodePage/DonateBtn/DonateBtn.styles.scss
@@ -4,12 +4,12 @@
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
 .donateBtnContainer {
-  @include mut.positioned-as(fixed, $bottom: 50px, $right: 41px);
+  @include mut.positioned-as(fixed, $bottom: 28px, $right: 41px);
   @include mut.flex-centered($direction: column);
 
   .donateBtnCircle {
-    @include mut.circular(62px, $color: transparent);
-    @include vnd.vendored(transition, '1s ease-in-out');
+    @include mut.circular(62px);
+    @include vnd.vendored(transition, 'filter 1s ease');
 
     @include mut.flex-centered();
     border: 3px solid c.$accented-red-color;
@@ -19,8 +19,9 @@
 
     &:hover {
       cursor: pointer;
-      rotate: y 360deg;
-      filter: drop-shadow(.3rem .2rem 1.5rem crimson);
+      // @include vnd.vendored(transform, 'rotateY(360deg)');
+      @include vnd.vendored(filter, 'drop-shadow(0 2px 15px rgba(61, 0, 0, .25))');
+      color: c.$dark-red-color;
     }
   }
 
