--- a/src/features/ProgressBar/ProgressBar.styles.scss
+++ b/src/features/ProgressBar/ProgressBar.styles.scss
@@ -84,10 +84,9 @@
 
   .progressBarProgressFill {
     overflow: hidden;
-    // @include mut.sized(2px);
+    height: calc(100% - 100px);
     width: 2px;
-    height: 80%;
-    @include mut.positioned-as(absolute, $top: 10%);
+    @include mut.positioned-as(absolute, $top: 50px);
     @include vnd.vendored(transform, 'rotate(0)');
   }
 }
